[package]
name = "yujin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
hex = "0.4.3"
js-sys = "0.3.64"
serde = { version = "1.0.171", features = ['derive'] }
serde-wasm-bindgen = "0.5.0"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"

[dependencies.web-sys]
version = "0.3.64"
features = [
'Headers',
'Request',
'RequestInit',
'RequestMode',
'Response',
'ResponseInit',
'ServiceWorkerGlobalScope'
]
